src/objects/Application_Settings__mdt.object
<CustomObject>
    <description>This custom meta data type holds configurable settings around the applications created by Endeveran.</description>
    <fields>
        <fullName>AuraId__c</fullName>
        <description>unique aura id for each application</description>
        <label>AuraId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avatar_Abr__c</fullName>
        <description>2 text abbr for lighting component/application</description>
        <label>Avatar Abr</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>name of component related to application, enter just the main container component</description>
        <inlineHelpText>c:name_of_component</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of lightning component/application</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <description>Salesforce lightning design system icon name associated with application. Look at the custom icons here https://www.lightningdesignsystem.com/icons/#site-main-content, 
example custom27</description>
        <inlineHelpText>enter custom icon as custom-# ( custom-27 )</inlineHelpText>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_Custom_Objects__c</fullName>
        <description>Name of restricted custom setting objects, hidden from the end user. Only add objects, do not remove.</description>
        <inlineHelpText>If blank, will use list defined in general record. Only add objects, do not remove.</inlineHelpText>
        <label>Restricted Custom Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Objects__c</fullName>
        <description>Standard Object support defined for each application. Do not modify.</description>
        <inlineHelpText>Enter standard object name, separated by comma. Do not modify</inlineHelpText>
        <label>Standard Objects</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Setting</label>
    <pluralLabel>Application Settings</pluralLabel>
    <validationRules>
        <fullName>Do_not_modify_standard</fullName>
        <active>true</active>
        <description>Validation rule to stop users from modifying this field. Field is only updatable via package update.</description>
        <errorConditionFormula>ISCHANGED(Standard_Objects__c)</errorConditionFormula>
        <errorMessage>Do not modify the standard object list field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_remove_custom</fullName>
        <active>true</active>
        <description>Validation rule to stop users from removing custom setting objects from list, that belong to endeveran corp.</description>
        <errorConditionFormula>AND(DeveloperName != &quot;General_Settings&quot;, OR(
NOT(CONTAINS(&quot;Assignment_Rule__c&quot;,Restricted_Custom_Objects__c)),
NOT(CONTAINS(&quot;Assignment_Rule_Criteria_Based_Rule__c&quot;, Restricted_Custom_Objects__c)),
NOT(CONTAINS(&quot;Assignment_Rule_Entry__c&quot;, Restricted_Custom_Objects__c)),
NOT(CONTAINS(&quot;Geo_Location_Lookup__c&quot;, Restricted_Custom_Objects__c)),
NOT(CONTAINS(&quot;Geo_Location_Territory__c&quot;, Restricted_Custom_Objects__c))
))</errorConditionFormula>
        <errorMessage>Missing sobject</errorMessage>
    </validationRules>
</CustomObject>